feat: MxResult调整